signup function complete

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header{
 .btn-primary{
     font-family: 'Roboto', sans-serif;
     font-size: 1rem;
-    background: aquamarine;
+    background: rgb(16, 83, 25);
     padding: 0.5rem 1rem;
     outline: none;
     border: none;
