--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ header{
 }
 
 .card{
-    background: grey;
+    background: white;
     width: 200px;
     height: 380px;
     margin: 30px;
@@ -158,6 +158,7 @@ header{
     color: white;
     padding: 10px;
     display: block;
+    border-radius: 5%;
 }
 
 
@@ -196,4 +197,20 @@ header{
 
 .description{
     
+}
+
+.profilebox-img{
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+}
+
+.profilebox{
+    width: 450px;
+    background: rgba(0, 0, 0, 0.4);
+    padding: 40px;
+    text-align: center;
+    margin: auto;
+    margin-top: 5px;
+    color: white;
 }
